UnsatisfiedLinkError on calling System.console().readPassword() on Windows

XMLWordPrintable

    • b04
    • 21
    • b06
    • generic
    • windows

      The subject call on Windows generate:
      ```
      Exception in thread "main" java.lang.UnsatisfiedLinkError: 'boolean jdk.internal.io.JdkConsoleImpl.echo(boolean)'
              at java.base/jdk.internal.io.JdkConsoleImpl.echo(Native Method)
              at java.base/jdk.internal.io.JdkConsoleImpl.readPassword(JdkConsoleImpl.java:101)
              at java.base/jdk.internal.io.JdkConsoleImpl.readPassword(JdkConsoleImpl.java:158)
              at java.base/java.io.ProxyingConsole.readPassword(ProxyingConsole.java:128)
              at d.main(d.java:7)
      ```

      Regression caused by JDK-8298971. Native method implementation for `echo()` is missing on Windows

            Assignee:
            Naoto Sato
            Reporter:
            Naoto Sato
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: