8300010: UnsatisfiedLinkError on calling System.console().readPassword() on Windows